# jaxframe

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DESIGN.md  DTYPE_BLOCKS_DESIGN.md  GPU_TPU_GUIDE.md  MULTI_GPU_GUIDE.md  PANDAS_API_PLAN.md  README.md  TESTING_SUMMARY.md  pyproject.toml  requirements.txt
benchmarks/: report.py  run.py
docs/: JOURNAL.md
examples/: device_management_example.py  distribute_vs_shard_vs_pmap.py  gpu_and_nesting_example.py  grad_example.py  jit_example.py  mixed_columns_example.py  pandas_compatibility_demo.py  weights_as_parameters.py
jaxframe/: __init__.py  dataframe.py
scripts/: api_coverage.py
tests/: conftest.py  test_api_coverage.py  test_benchmarks.py  test_dataframe.py  test_equivalence_framework.py  test_gpu.py  test_jax_transforms.py  test_jax_transforms_series.py  test_nan_handling.py  test_pandas_edge_cases.py  test_pandas_equivalence.py  test_pandas_mirror.py  test_pandas_parity_v2.py  test_window_perf.py
