[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_backend"

[project]
name = "jaxframe"
version = "0.1.0"
description = "A JAX-based DataFrame library with pandas-like API supporting JIT compilation and automatic differentiation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["jax", "dataframe", "pandas", "machine-learning", "automatic-differentiation"]
authors = [
    {name = "JAXFrame Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://github.com/yourusername/jaxframe"
Documentation = "https://github.com/yourusername/jaxframe#readme"
Repository = "https://github.com/yourusername/jaxframe"
Issues = "https://github.com/yourusername/jaxframe/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["jaxframe*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=jaxframe --cov-report=term-missing"
