[project]
name = "jaxframe"
version = "0.1.0"
description = "A JAX-based DataFrame library with pandas-like API supporting JIT compilation and automatic differentiation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["jax", "dataframe", "pandas", "machine-learning", "automatic-differentiation"]
authors = [
    {name = "Wil Yegelwel"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "numpy>=1.24.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pandas>=2.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/wyegelwel/jaxframe"
Repository = "https://github.com/wyegelwel/jaxframe"
Issues = "https://github.com/wyegelwel/jaxframe/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
